deployment/k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thruster-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: thruster-ui
  template:
    spec:
      containers:
      - name: thruster-ui
        image: mongmx/thruster-ui:develop
