deployment/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.test
    http:
      paths:
      # - path: /api/?(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: cloud-api
      #       port:
      #         number: 8080
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: thruster-ui
            port:
              number: 3000
